test/corpus/razor_html.txt
=======
razor attribute values
=======

    <a @onclick="async () => { pageNo = 1; await Search(); }">First</a>
    <a @onclick="async () => { pageNo = totalPages; await Search(); }">Last</a>
---

(compilation_unit
  (element
    (tag_name)
    (razor_html_attribute
      (razor_attribute_name)
      (razor_attribute_value
        (modifier)
        (lambda_expression
          (parameter_list)
          (block
            (expression_statement
              (assignment_expression
                (identifier)
                (integer_literal)))
            (expression_statement
              (await_expression
                (invocation_expression
                  (identifier)
                  (argument_list))))))))
    (tag_name))
  (element
    (tag_name)
    (razor_html_attribute
      (razor_attribute_name)
      (razor_attribute_value
        (modifier)
        (lambda_expression
          (parameter_list)
          (block
            (expression_statement
              (assignment_expression
                (identifier)
                (identifier)))
            (expression_statement
              (await_expression
                (invocation_expression
                  (identifier)
                  (argument_list))))))))
    (tag_name)))

======
CSharp in HTML attribute - String(Semantic Highlighting does the rest)
======
   <GridColumn SortKeySelector="item => item.Integration.Id">
      </GridColumn>
----

(compilation_unit
  (element
    (tag_name)
    (attribute_name)
    (attribute_value)
    (tag_name)))

======
HTML Attribute of empty string
======
   <GridColumn Nothing="">
      </GridColumn>
----

(compilation_unit
  (element
    (tag_name)
    (attribute_name)
    (attribute_value)
    (tag_name)))

===
razor section
===
@section Scripts {
     <script type="text/javascript" src="/scripts/main.js"></script>
}
---

(compilation_unit
  (razor_section
    (identifier)
    (script_element
      (tag_name)
      (attribute_name)
      (attribute_value)
      (attribute_name)
      (attribute_value)
      (tag_name))))

======
form html attribute with value
======
<form @onsubmit="SearchAsync" />
---

(compilation_unit
  (element
    (tag_name)
    (razor_html_attribute
      (razor_attribute_name)
      (razor_attribute_value
        (identifier)))))

======
form html attribute with modifier
======
<form @onclick:preventDefault />
---

(compilation_unit
  (element
    (tag_name)
    (razor_html_attribute
      (razor_attribute_name
        (razor_attribute_modifier)))))

======
form html attribute with modifier and value
======
<form @bind:culture="Culture" />
---

(compilation_unit
  (element
    (tag_name)
    (razor_html_attribute
      (razor_attribute_name
        (razor_attribute_modifier))
      (razor_attribute_value
        (identifier)))))

======
form html attribute case insensitive
======
<form @onClick:preventDefault />
---

(compilation_unit
  (element
    (tag_name)
    (razor_html_attribute
      (razor_attribute_name
        (razor_attribute_modifier)))))

======
Mixed text and Razor expression in HTML attribute
======
<div class="x @(true ? "y" : "")">Hello</div>
---

(compilation_unit
  (element
    (tag_name)
    (attribute_name)
    (attribute_value
      (razor_explicit_expression
        (parenthesized_expression
          (conditional_expression
            (boolean_literal)
            (string_literal
              (string_literal_content))
            (string_literal)))))
    (tag_name)))
